--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,5 @@
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"],
-  "files": ["src/styles/styled.d.ts"]
+  "files": ["styles/styled.d.ts"]
 }
